[IMP] stock,*: replace is scrap location with inventory loss type
*: l10n_ec_stock, mrp, mrp_repair, purchase_mrp, purchase_stock, repair,
   sale_mrp, sale_stock, stock_account

With this commit:
-----------------------------------------------
- Removed the Is `scrap_location` field and replaced it with the `Inventory Loss`
  location type because `Is scrap location` is useless when we already have an
  location type of `inventory Loss`.

also removed fields related to `scrap_location`.
- removed `scrapped` field from `stock.move`
- removed `is_scrap` field from `stock.move.line`
- removed `is_scrap` field from `stock.valuation.layer`

Task ID: [4728397](https://www.odoo.com/odoo/project/966/tasks/4728397)

Part-of: odoo/odoo#215517
Related: odoo/enterprise#88319
Related: odoo/upgrade#7991
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock/views/stock_move_line_views.xml
+++ b/addons/stock/views/stock_move_line_views.xml
@@ -14,7 +14,7 @@
                        decoration-info="picking_code == 'outgoing'"
                        decoration-success="picking_code == 'incoming'"
                        decoration-warning="is_inventory"
-                       decoration-danger="is_scrap"/>
+                       decoration-danger="scrap_id"/>
                 <field name="product_id"/>
                 <field name="lot_id" optional="show" groups="stock.group_production_lot"/>
                 <field name="package_id" optional="hide" groups="stock.group_tracking_lot"/>
