--- a/addons/stock/views/stock_picking_views.xml
+++ b/addons/stock/views/stock_picking_views.xml
@@ -266,7 +266,7 @@
                                 widget="stock_move_one2many"
                                 readonly="state == 'done' and is_locked"
                                 context="{'default_company_id': company_id, 'default_date': scheduled_date, 'default_date_deadline': date_deadline, 'picking_type_code': picking_type_code, 'default_picking_id': id, 'form_view_ref': 'stock.view_stock_move_operations', 'address_in_id': partner_id, 'default_picking_type_id': picking_type_id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_partner_id': partner_id}">
-                                <list decoration-muted="scrapped == True or state == 'cancel' or (state == 'done' and is_locked == True)" string="Stock Moves" editable="bottom">
+                                <list decoration-muted="scrap_id or state == 'cancel' or (state == 'done' and is_locked == True)" string="Stock Moves" editable="bottom">
                                     <control>
                                         <create string="Add a Product"/>
                                         <button name="action_add_packages" context="{'picking_id': parent.id, 'show_src_package': 1}" string="Move a Pack" type="object" class="px-4 btn-link" groups="stock.group_tracking_lot"/>
@@ -277,7 +277,6 @@
                                     <field name="location_id" column_invisible="True"/>
                                     <field name="location_dest_id" column_invisible="True"/>
                                     <field name="partner_id" column_invisible="True" readonly="state == 'done'"/>
-                                    <field name="scrapped" column_invisible="True"/>
                                     <field name="picking_code" column_invisible="True"/>
                                     <field name="show_details_visible" column_invisible="True"/>
                                     <field name="additional" column_invisible="True"/>
