[IMP] l10n_gcc_invoice*, l10n_sa*, l10n_ae*, l10n_bh, l10n_kw, l10n_om, l10n_qa: Improve l10n_gcc_invoice report
Previously the l10n_gcc_invoice module had its own invoice report document and all inheriting modules were extending it
rather than inheriting with primary=true. this caused issues since sometimes due to having multiple companies setup in different gcc countries.
it also made it hard to customize the reports for one gcc country without affecting the other gcc countries.

dual language reports were also mandatory without an option to deactivate them when installing l10n_gcc_invoice.

This commit changes the l10n_gcc_invoice to inherit from standard, and all inheriting modules will inherit the l10n_gcc_invoice document
with primary=true. dual language is also an option for pos receipts & invoice documents that can be set on the settings.

task-4656705

closes odoo/odoo#220167

Related: odoo/upgrade#8209
Signed-off-by: Florian Gilbert (flg) <flg@odoo.com>

--- a/addons/l10n_ae/views/account_move.xml
+++ b/addons/l10n_ae/views/account_move.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//list//field[@name='tax_ids']" position="after">
-                    <field name="l10n_ae_vat_amount" optional="show" column_invisible="parent.country_code != 'AE'"/>
+                    <field name="l10n_gcc_invoice_tax_amount" string="VAT Amount" optional="show" column_invisible="parent.country_code != 'AE'"/>
                 </xpath>
             </field>
         </record>
