--- a/addons/stock/views/stock_quant_views.xml
+++ b/addons/stock/views/stock_quant_views.xml
@@ -79,7 +79,7 @@
                                 readonly="tracking not in ['serial', 'lot']"
                                 required="tracking != 'none'"
                                 context="{'default_product_id': product_id}"/>
-                            <field name="package_id" readonly="0" groups="stock.group_tracking_lot"/>
+                            <field name="package_id" readonly="0" groups="stock.group_tracking_lot" context="{'show_src_package': 1}"/>
                             <field name="owner_id" readonly="0" groups="stock.group_tracking_owner" options="{'no_create': True}"/>
                             <field name='company_id' groups="base.group_multi_company"/>
                         </group>
@@ -134,7 +134,7 @@
                 <field name="product_categ_id" optional="hide"/>
                 <field name='company_id' groups="base.group_multi_company" optional="hidden"/>
                 <field name="package_id" groups="stock.group_tracking_lot"
-                       readonly="id"/>
+                       readonly="id" widget="package_m2o" context="{'show_src_package': 1}"/>
                 <field name="lot_id" groups="stock.group_production_lot"
                        column_invisible="context.get('hide_lot', False)"
                        readonly="id or tracking not in ['serial', 'lot']"
@@ -164,7 +164,7 @@
                 <field name="lot_id" groups="stock.group_production_lot"
                        column_invisible="context.get('hide_lot', False)"/>
                 <field name="lot_properties"/>
-                <field name="package_id" groups="stock.group_tracking_lot"/>
+                <field name="package_id" groups="stock.group_tracking_lot" widget="package_m2o" context="{'show_src_package': 1}"/>
                 <field name="owner_id" groups="stock.group_tracking_owner"/>
                 <field name="quantity" string="On Hand"/>
                 <field name="available_quantity" string="Available" column_invisible="context.get('hide_available', False)"/>
@@ -325,7 +325,7 @@ in this location. That leads to a negative stock.
                     context="{'default_product_id': product_id}"
                     decoration-warning="sn_duplicated"
                     force_save="1"/>
-                <field name="package_id" groups="stock.group_tracking_lot" readonly="id"/>
+                <field name="package_id" groups="stock.group_tracking_lot" widget="package_m2o" context="{'show_src_package': 1}" readonly="id"/>
                 <field name="owner_id" groups="stock.group_tracking_owner" readonly="id" options="{'no_create': True}"/>
                 <field name="last_count_date" optional='hidden' readonly='1'/>
                 <field name="available_quantity" string="Available Quantity" decoration-danger="available_quantity &lt; 0" optional="hidden"/>
