[IMP] portal, website_sale: review address selector
This commit aims to improve the address selector component by providing
a better information hierarchy: more contrast between elements, less
primary color, replacing labeling icons with descriptive badges.

The "Add Address" button has also been redesigned to make it more easily
accessible on mobile when multiple addresses are defined by the user.

task-4904868

--- a/addons/website_sale/views/delivery_form_templates.xml
+++ b/addons/website_sale/views/delivery_form_templates.xml
@@ -6,7 +6,7 @@
             - delivery_methods: The delivery methods to display, as a `delivery.carrier` recordset.
             - selected_dm_id: The selected delivery method id.
         -->
-        <form id="o_delivery_form" class="o_delivery_form mb-4">
+        <form id="o_delivery_form" class="o_delivery_form mb-4 pt-2">
             <h5>Delivery method</h5>
             <ul t-if="delivery_methods" id="o_delivery_methods" class="list-group">
                 <t t-foreach="delivery_methods" t-as="dm">
