--- a/addons/portal/views/address_templates.xml
+++ b/addons/portal/views/address_templates.xml
@@ -5,14 +5,47 @@
     <template id="portal.my_addresses">
         <t t-set="additional_title">My addresses</t>
         <t t-call="portal.portal_layout">
-            <div class="o_portal_addresses">
-                <h5 class="mt-4">Delivery address</h5>
+            <t t-set="address_type" t-valuef="delivery"/>
+            <t
+                t-set="new_address_url"
+                t-valuef="{{address_url}}?address_type={{address_type}}&amp;use_delivery_as_billing={{use_delivery_as_billing}}"
+            />
+            <section class="o_portal_addresses">
+                <div class="d-flex justify-content-between align-items-start gap-3 mb-3">
+                    <h5 class="mb-0">Delivery address</h5>
+                    <a
+                        role="button"
+                        t-att-href="new_address_url"
+                        t-att-data-address-type="address_type"
+                        class="o_address_kanban_add_new btn btn-outline-primary btn-sm"
+                        title="Add an address"
+                        aria-label="Add an address"
+                    >
+                        <i class="oi oi-plus me-2"/>Add Address
+                    </a>
+                </div>
                 <t t-call="portal.address_row">
                     <t t-set="addresses" t-value="delivery_addresses"/>
-                    <t t-set="address_type" t-valuef="delivery"/>
                 </t>
-                <h5 class="mt-4">Billing address</h5>
-                <div class="form-check form-switch mt-2 mb-3">
+                <t t-set="address_type" t-valuef="billing"/>
+                <t
+                        t-set="new_address_url"
+                        t-valuef="{{address_url}}?address_type={{address_type}}&amp;use_delivery_as_billing={{use_delivery_as_billing}}"
+                />
+                <div class="d-flex justify-content-between align-items-start gap-3 mt-4 pt-2">
+                    <h5 class="mb-0">Billing address</h5>
+                    <a
+                        role="button"
+                        t-att-href="new_address_url"
+                        t-att-data-address-type="address_type"
+                        t-attf-class="o_address_kanban_add_new o_add_billing_address_btn btn btn-outline-primary btn-sm {{'d-none' if use_delivery_as_billing else ''}}"
+                        title="Add an address"
+                        aria-label="Add an address"
+                    >
+                        <i class="oi oi-plus me-2"/>Add Address
+                    </a>
+                </div>
+                <div class="form-check form-switch mt-2">
                     <label id="use_delivery_as_billing_label">
                         <input
                             type="checkbox"
@@ -24,29 +57,22 @@
                 </div>
                 <div
                     id="billing_container"
-                    t-attf-class="{{'d-none' if use_delivery_as_billing else ''}}"
+                    t-attf-class="mt-3 {{'d-none' if use_delivery_as_billing else ''}}"
                 >
                     <t t-call="portal.address_row">
                         <t t-set="addresses" t-value="billing_addresses"/>
-                        <t t-set="address_type" t-valuef="billing"/>
                     </t>
                 </div>
-            </div>
+            </section>
         </t>
     </template>
 
     <template id="portal.address_row">
         <div
             name="address_row"
-            t-attf-class="row row-cols-md-2 row-cols-lg-3 g-3 flex-nowrap flex-md-wrap o_portal_address_row"
+            t-attf-class="o_portal_address_row d-flex flex-column gap-3"
         >
-            <t t-set="new_address_url" t-valuef="{{address_url}}?address_type={{address_type}}"/>
-            <t
-                t-if="address_type == 'delivery'"
-                t-set="new_address_url"
-                t-valuef="{{new_address_url}}&amp;use_delivery_as_billing={{use_delivery_as_billing}}"
-            />
-            <div t-foreach="addresses" t-as="address" class="col-md">
+            <t t-foreach="addresses" t-as="address">
                 <t t-call="portal.address_kanban">
                     <t t-set="contact" t-value="address"/>
                     <t t-set="is_user_address" t-value="address == request.env.user.partner_id"/>
@@ -61,19 +87,7 @@
                     <t t-set="selected" t-value="address == selected_address"/>
                     <t t-set="show_removal" t-value="can_be_edited and not selected and not is_user_address"/>
                 </t>
-            </div>
-            <div name="add_address" class="col-md">
-                <a
-                    name="new_address_ref"
-                    role="button"
-                    t-att-href="new_address_url"
-                    t-att-data-address-type="address_type"
-                    class="o_address_kanban_add_new d-flex flex-column align-items-center justify-content-center h-100 p-4 mx-auto rounded text-decoration-none"
-                    style="border: 1px dashed;"
-                >
-                    <i class="oi oi-plus fa-2x mb-2"/>Add Address
-                </a>
-            </div>
+            </t>
         </div>
     </template>
 
@@ -82,34 +96,37 @@
         <div
             name="address_card"
             t-attf-class="card o_address_kanban_card position-relative h-100 #{
-                selected and 'bg-primary border border-primary'
+                selected and 'bg-400 border border-primary'
             }"
             t-att-data-address-type="address_type"
             t-att-data-partner-id="contact.id"
         >
-            <div class="card-body d-flex flex-column justify-content-between">
+            <div class="card-body d-flex flex-column flex-md-row justify-content-between gap-3">
                 <t
                     t-out="contact"
-                    t-options="dict(widget='contact', fields=['name', 'address'], no_marker=True)"
+                    t-options="dict(widget='contact', fields=['name', 'address'], no_marker=True, no_tag_br=True)"
                 />
-                <t t-set="icon_classes" t-value="'fa text-primary fs-5 position-absolute mt-1 '"/>
-                <div class="mt-3 mx-1">
-                    <i
+                <t t-set="badge_classes" t-value="'badge text-bg-info'"/>
+                <div class="d-flex flex-row-reverse flex-md-column justify-content-between align-items-end">
+                    <span
                         t-if="is_user_address"
-                        t-att-class=" icon_classes + 'fa-id-card'"
-                        title="Your Account Address"
-                    />
-                    <i
+                        t-att-class=" badge_classes "
+                    >
+                        Main Address
+                    </span>
+                    <span
                         t-elif="contact.type=='delivery'"
-                        t-att-class=" icon_classes + 'fa-solid fa-truck'"
-                        title="Delivery Address"
-                    />
-                    <i
+                        t-att-class=" badge_classes "
+                    >
+                        Delivery Address
+                    </span>
+                    <span
                         t-elif="contact.type=='invoice'"
-                        t-att-class=" icon_classes + 'fa-file-text'"
-                        title="Billing Address"
-                    />
-                    <div t-if="can_be_edited" class="text-end">
+                        t-att-class=" badge_classes "
+                    >
+                        Billing Address
+                    </span>
+                    <div t-if="can_be_edited" class="d-flex gap-1 mt-auto me-n2 mb-n2">
                         <t
                             t-set="address_update_url"
                             t-value="address_update_url or (new_address_url + '&amp;partner_id=' + str(contact.id))"
@@ -117,26 +134,25 @@
                         <a
                             name="card_address_ref"
                             t-att-href="address_update_url"
-                            class="js_edit_address btn btn-link fw-bold p-0 mt-auto"
+                            class="js_edit_address p-2"
                             role="button"
                             title="Edit this address"
                             aria-label="Edit this address"
                         >
-                            <i class="fa fa-pencil me-1"/>
-                            Edit
+                            <i class="fa fa-fw fa-pencil"/>
                         </a>
-                        <span t-if="show_removal">
-                            <span class="mx-2">|</span>
+                        <t t-if="show_removal">
+                            <span class="d-block border-start border-2 my-2"/>
                             <a
-                                class="btn btn-link text-danger fw-bold p-0 o_remove_address"
+                                class="o_remove_address p-2 text-danger"
                                 role="button"
-                                title="Remove address"
-                                aria-label="Remove address"
+                                title="Remove this address"
+                                aria-label="Remove this address"
                                 t-att-data-partner-id="contact.id"
                             >
-                                Remove
+                                <i class="fa fa-fw fa-trash"/>
                             </a>
-                        </span>
+                        </t>
                     </div>
                 </div>
             </div>
