[IMP] portal, website_sale: review address selector
This commit aims to improve the address selector component by providing
a better information hierarchy: more contrast between elements, less
primary color, replacing labeling icons with descriptive badges.

The "Add Address" button has also been redesigned to make it more easily
accessible on mobile when multiple addresses are defined by the user.

task-4904868

--- a/addons/delivery_mondialrelay/views/portal_address_templates.xml
+++ b/addons/delivery_mondialrelay/views/portal_address_templates.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="address_kanban" inherit_id="portal.address_kanban">
+    <template id="address_card" inherit_id="portal.address_card">
         <t t-out="contact" position="before">
             <t t-if="contact.is_mondialrelay">
                 <img
