--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -960,7 +960,7 @@
         }
     }
 
-    .o_address_kanban_card {
+    .o_address_card {
         cursor: pointer;
     }
 }
@@ -1815,12 +1815,6 @@ $-product-radius-map: (
             overflow-y: scroll;
             height: 15rem;
         }
-    }
-
-    span[itemprop='name'] {
-        font-size: $h6-font-size;
-        font-weight: $headings-font-weight;
-        line-height: $headings-line-height;
     }
 
     div[itemprop="address"] {
