--- a/addons/website_sale_mondialrelay/views/templates.xml
+++ b/addons/website_sale_mondialrelay/views/templates.xml
@@ -1,8 +1,8 @@
 <odoo>
 
     <template
-        id="website_sale_mondialrelay_billing_address_row"
-        inherit_id="website_sale.billing_address_row"
+        id="website_sale_mondialrelay_billing_address_list"
+        inherit_id="website_sale.billing_address_list"
     >
         <label id="use_delivery_as_billing_label" position="attributes">
             <attribute name="title">Unavailable with Mondial Relay</attribute>
@@ -11,7 +11,7 @@
         </label>
     </template>
 
-    <template id="website_sale_mondialrelay_address_kanban" inherit_id="website_sale.address_kanban">
+    <template id="website_sale_mondialrelay_address_card" inherit_id="website_sale.address_card">
         <div name="address_card" position="attributes">
             <attribute name="t-att-data-is-mondialrelay">contact.is_mondialrelay</attribute>
         </div>
