[IMP] website_sale: Remove `Magnifier on hover` zoom option from eCommerce
Before this commit:
- The product image zoom behavior in eCommerce was controlled by a selection
  field with options: `None`, `Magnifier on hover`, and `Zoom on click`
  and `Both`.
- `Magnifier on hover` does not work on mobile and provides limited added value.

After this commit:
- Remove the `Magnifier on hover` option and related logic.
- Replace the zoom mode selector with a boolean `Zoom on click` toggle.
- During upgrade, activate `Zoom on click` for all configurations except those
  set to `None`.

affected version - master
task - 4712502

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2439,23 +2439,8 @@
     </template>
 
     <!-- Product options: Zoom -->
-    <template inherit_id='website_sale.product' id="product_picture_magnify_hover" name="Automatic Image Zoom">
+    <template inherit_id='website_sale.product' id="product_picture_magnify_click" name="Image Zoom On Click">
         <xpath expr='//div[hasclass("o_wsale_product_page")]' position='attributes'>
-            <attribute name="data-ecom-zoom-auto">1</attribute>
-            <attribute name="class" separator=" " add="ecom-zoomable zoomodoo-next" />
-        </xpath>
-    </template>
-
-    <template inherit_id='website_sale.product' id="product_picture_magnify_click" active="False" name="Image Zoom On Click">
-        <xpath expr='//div[hasclass("o_wsale_product_page")]' position='attributes'>
-            <attribute name="data-ecom-zoom-click">1</attribute>
-            <attribute name="class" separator=" " add="ecom-zoomable zoomodoo-next" />
-        </xpath>
-    </template>
-
-    <template inherit_id='website_sale.product' id="product_picture_magnify_both" active="False" name="Automatic Image Zoom And On Click">
-        <xpath expr='//div[hasclass("o_wsale_product_page")]' position='attributes'>
-            <attribute name="data-ecom-zoom-auto">1</attribute>
             <attribute name="data-ecom-zoom-click">1</attribute>
             <attribute name="class" separator=" " add="ecom-zoomable zoomodoo-next" />
         </xpath>
