[REF] l10n_my_eid_pos: myinvois

--- a/addons/l10n_my_edi_pos/views/pos_order_views.xml
+++ b/addons/l10n_my_edi_pos/views/pos_order_views.xml
@@ -11,6 +11,7 @@
                         type="object"
                         icon="fa-sun-o"
                         class="oe_stat_button"
+                        groups="account.group_account_invoice"
                         invisible="not consolidated_invoice_ids">
                     <span>Consolidated<br/>Invoice</span>
                 </button>
