[IMP] website_sale_comparison: introduce a new design
This commit introduces a redesign of the comparison feature.

Key changes :

** Specific to the comparison page **

- Switch from a `<table>` structure to a `<div>` one for more fluidity ;

- Introduce a `mini sticky` element which is displayed when users scroll
past a certain point. This element contains key information for users
always have them in sight (product name, thumbnail, and price) ;

- Inherit layout options from `/shop` page (products images ratio and
container size) to match the style defined by the user ;

- Introduce a back button within the `bottom bar` so users can continue
shopping if they want to add more products to the comparison ;

** Global to the comparison feature **

- Remove the old popover implementation and introduce a `bottom bar`
instead. This element contains key information for users
always have them in sight (product name, thumbnail, and price) as well
as key actions (compare, remove, ...)

- Allow users to remove all products at once from a comparison and
redirect them to the `/shop` page if they were on the comparison one ;

- Allow the `bottom bar` to inherit layout options from `/shop` page
(products images ratio and container size) to match the style defined
by the user ;

** Technical Changes **

- Switch from cookies to session for comparison logic.

- Show variant specific information on the compare page.

- Update disabled attribute on compare button according to
products added on the comparison bar.

closes odoo/odoo#220371

Signed-off-by: Valentin Chevalier <vcr@odoo.com>

--- a/addons/website_sale_wishlist/views/website_sale_wishlist_template.xml
+++ b/addons/website_sale_wishlist/views/website_sale_wishlist_template.xml
@@ -302,6 +302,7 @@
                         <h1 class="h4-fs mb-3">My Wishlist</h1>
                         <div
                             id="o_comparelist_table"
+                            class="o_wishlist_table"
                             style="--o-wsale-products-grid-gap: 16px;"
                             t-attf-class="grid table-comparator mb-5 {{website.wishlist_opt_products_design_classes}}"
                         >
